# crown

./: .gitignore  DESIGN.md  README.md  RELATED_WORK.md  VISION.md  overview.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: CIRCUIT_RESULTS.md  EXTERNAL_RESULTS.md  RESULTS.md  circuit_size.py  compare.py  external_solvers.py  instances.py  run_benchmark.py
crown/: __init__.py  andor.py  certificate.py  circuit.py  cli.py  elimination.py  generators.py  ising.py  qubo_io.py  reduce.py  rigorous.py  roofdual.py  search.py  solve.py  verify.py
examples/: demo.py
tests/: test_crown.py
